# devtools

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: benchmark_feature_store_latency.py
src/: main.py
src/archive/: __init__.py  local.py  s3_compat.py  storage.py
src/features/: feat_processor_store.py  real_time_feat_processor.py  realtime_config.py  realtime_device.py  realtime_geo.py  realtime_models.py  realtime_velocity.py
src/fraud_detection_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/generators/: schema.py  synthetic_payments.py
src/ingestion/: __init__.py  stream_ingester.py
src/sources/: event_sources.py
src/stores/: feature_lookup.py  stores.py
src/tests/: test_all.py  test_archive_local.py  test_archive_s3.py  test_feature_store_integration.py  test_feature_stores.py  test_stream_ingester.py  test_stream_ingester_integration.py
