[project]
name = "fraud-detection-system"
version = "0.1.0"
description = "A Fraud Detection System using Machine Learning"
authors = [
    { name = "Terence Schumacher", email = "terenceschumacher@gmail.com" }
    ]
dependencies = [
    "requests",
    "confluent-kafka",
    "boto3>=1.34.1",
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest]
addopts = ["-v"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
