 [project]
 name = "fraud-detection-system"
 version = "0.1.0"
 description = "A Fraud Detection System using Machine Learning"
 authors = [
     { name = "Terence Schumacher", email = "terenceschumacher@gmail.com" }
     ]
 dependencies = [
     "requests",
     "confluent-kafka>=2.3",
     "boto3>=1.34",
     "pytest>=9.0.2",
     "pylint>=4.0.5",
 ]

[project.optional-dependencies]
test = ["moto[s3]>=5.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest]
addopts = ["-v"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
